<resources>
    <string name="app_name">MarvelApp</string>

    <string name="app_title">Marvel Characters</string>
    <string name="search_hint">Search...</string>
    <string name="description_title">Description</string>
    <string name="comics_title">Comics</string>
    <string name="stories_title">Stories</string>
    <string name="series_title">Series</string>
    <string name="events_title">Events</string>
    <string name="related_links">Related links</string>
    <string name="detail">DETAIL</string>
    <string name="wiki">WIKI</string>
    <string name="comic">COMICLINK</string>
    <string name="no_description">No Description Avaliable</string>
</resources>
