<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:id="@+id/charachter_image"/>



<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/description_title"
        android:text="@string/description_title"
        android:textColor="@android:color/holo_red_dark"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/description_content"
        style="@style/ContentTextAppearance"
        android:text="lkvjsxkljvlksjvlkvjdskljvdsjklvjkdsljfsdlkjflkdsjfkldsnfsdm,n,mdsnfd,mns,mnfdsnfm,nsm,nf,dsmf,mdsn"
        />
</LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comics_title"
                style="@style/TitleTextAppearance"
                android:id="@+id/comics_title"/>

            <android.support.v4.view.ViewPager
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:id="@+id/comics_view_pager">

            </android.support.v4.view.ViewPager>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/series_title"
                android:text="@string/series_title"
                style="@style/TitleTextAppearance"/>

            <android.support.v4.view.ViewPager
                android:layout_width="match_parent"
                android:layout_height="100dp">

            </android.support.v4.view.ViewPager>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/stories_title"
                android:text="@string/stories_title"
                style="@style/TitleTextAppearance"/>

            <android.support.v4.view.ViewPager
                android:layout_width="match_parent"
                android:layout_height="100dp">

            </android.support.v4.view.ViewPager>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/events_title"
                android:text="@string/events_title"
                style="@style/TitleTextAppearance"/>

            <android.support.v4.view.ViewPager
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:id="@+id/events_view_pager">

            </android.support.v4.view.ViewPager>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/related_links"
                android:text="@string/related_links"
                style="@style/TitleTextAppearance"/>




        </LinearLayout>
    </LinearLayout>
</ScrollView>